src/parse.c
// Copyright (c) 2024, The paw Authors. All rights reserved.
// This source code is licensed under the MIT License, which can be found in
// LICENSE.md. See AUTHORS.md for a list of contributor names.

#include "parse.h"
#include "ast.h"
#include "compile.h"
#include "env.h"
#include "error.h"
#include "map.h"

#define MAX_METHODS 10000
#define MAX_LITERAL_ELEMENTS 10000
#define MAX_PATH_SEGMENTS 10000

_Static_assert(PAW_MAX_ARGUMENTS < INT_MAX, "");
_Static_assert(PAW_MAX_VARIANTS < INT_MAX, "");
_Static_assert(PAW_MAX_FIELDS < INT_MAX, "");
_Static_assert(PAW_MAX_UPVALUES < INT_MAX, "");
_Static_assert(MAX_METHODS < INT_MAX, "");
_Static_assert(MAX_LITERAL_ELEMENTS < INT_MAX, "");
_Static_assert(MAX_PATH_SEGMENTS < INT_MAX, "");

#define PARSE_ERROR(X_, Kind_, ...) pawErr_##Kind_((X_)->C, (X_)->modname, __VA_ARGS__)
#define LIMIT_ERROR(x, start, what, limit) PARSE_ERROR(x, too_many_elements, start, what, limit)

// TODO: remove other versions/rename these versions
#define PARSE_ERROR_(X_, Loc_, ...) pawErr_generic_error(ENV(X_), (X_)->modname, Loc_, __VA_ARGS__)
#define LIMIT_ERROR_(X_, Loc_, What_, Limit_) pawErr_exceeded_limit(ENV(X_), (X_)->modname, Loc_, What_, Limit_)

#define NEW_NODE(Lex_, Kind_, ...) \
    pawAst_new_##Kind_((Lex_)->ast, __VA_ARGS__)
#define SPAN(From_, To_) ((struct SourceSpan){.start = From_, .end = To_})
#define TOKEN_START(Token_) ((Token_).span.start)
#define TOKEN_END(Token_) ((Token_).span.end)
#define NODE_SPAN(Node_) ((Node_)->hdr.span)
#define NODE_START(Node_) ((Node_)->hdr.span.start)
#define NODE_END(Node_) ((Node_)->hdr.span.end)

#define LOWEST_PRECEDENCE 0

static struct SourceSpan span_from(struct Lex *lex, struct SourceLoc start)
{
    return (struct SourceSpan){
        .start = start,
        .end = lex->t.span.start,
    };
}

static NodeId next_id(struct Lex *lex)
{
    return (NodeId){(unsigned)++lex->ast->node_count};
}


// recursive non-terminals
static struct AstExpr *expression(struct Lex *, unsigned);
static struct AstPat *pattern(struct Lex *);

_Noreturn static void visibility_qualifier_not_allowed_here(struct Lex *X, struct SourceLoc loc)
{
    PARSE_ERROR_(X, loc, "visibility qualifier not allowed here");
}

static void missing_delim(struct Lex *lex, TokenKind want, TokenKind open, struct SourceLoc start)
{
    PARSE_ERROR_(lex, lex->loc, "expected '%c' to match '%c' at %d:%d",
            want, open, start.line, start.column);
}

static void delim_next(struct Lex *lex, TokenKind want, TokenKind open, struct SourceLoc start)
{
    TokenKind const have = lex->t.kind;
    if (have != want) {
        if (have == TK_GREATER2 && want == '>') {
            // special case: split '>>' into 2 '>'
            lex->t.kind = '>';
            return;
        }
        missing_delim(lex, want, open, start);
    }
    pawX_next(lex);
}

static void enter_expression(struct Lex *lex)
{
    int const MAX_NESTING = 100000;
    if (lex->nest_depth > MAX_NESTING)
        LIMIT_ERROR(lex, lex->loc, "nested expressions", MAX_NESTING);
    ++lex->nest_depth;
}

static void leave_expression(struct Lex *lex)
{
    paw_assert(lex->nest_depth >= 0);
    --lex->nest_depth;
}

static struct AstExpr *expect_expr0(struct Lex *lex)
{
    enter_expression(lex);
    struct SourceLoc const start = TOKEN_START(lex->t);
    struct AstExpr *expr = expression(lex, LOWEST_PRECEDENCE);
    leave_expression(lex);

    if (expr == NULL)
        PARSE_ERROR(lex, expected_expression, start);
    return expr;
}

static paw_Bool equals_cstr(struct Lex *lex, Str const *ident, unsigned cstr)
{
    return pawS_eq(ident, CACHED_STRING(ENV(lex), cstr));
}

// ORDER UnaryOp
enum UnOp {
    UN_LEN, // #
    UN_NEG, // -
    UN_NOT, // !
    UN_BNOT, // ~

    NUNOPS
};

// ORDER BinaryOp
enum InfixOp {
    INFIX_EQ, // ==
    INFIX_NE, // !=
    INFIX_LT, // <
    INFIX_LE, // <=
    INFIX_GT, // >
    INFIX_GE, // >=
    INFIX_AS, // as
    INFIX_ADD, // +
    INFIX_SUB, // -
    INFIX_MUL, // *
    INFIX_DIV, // /
    INFIX_MOD, // %
    INFIX_BITXOR, // ^
    INFIX_BITAND, // &
    INFIX_BITOR, // |
    INFIX_SHL, // <<
    INFIX_SHR, // >>
    INFIX_CONCAT, // ++
    INFIX_RANGE, // ..
    INFIX_RANGEI, // ..=
    INFIX_AND, // &&
    INFIX_OR, // ||
    INFIX_ASSIGN, // =
    INFIX_ACONCAT, // ++=
    INFIX_AADD, // +=
    INFIX_ASUB, // -=
    INFIX_AMUL, // *=
    INFIX_ADIV, // /=
    INFIX_AMOD, // %=
    INFIX_ABITXOR, // ^=
    INFIX_ABITAND, // &=
    INFIX_ABITOR, // |=
    INFIX_ASHL, // <<=
    INFIX_ASHR, // >>=

    NINFIX
};

#define NOT_UNOP NUNOPS
#define NOT_INFIX NINFIX

static const struct {
    uint8_t left;
    uint8_t right;
} kInfixPrec[NINFIX] = {
    [INFIX_AS] = {13, 13},
    [INFIX_MUL] = {12, 12},
    [INFIX_DIV] = {12, 12},
    [INFIX_MOD] = {12, 12},
    [INFIX_CONCAT] = {11, 11},
    [INFIX_ADD] = {11, 11},
    [INFIX_SUB] = {11, 11},
    [INFIX_SHL] = {10, 10},
    [INFIX_SHR] = {10, 10},
    [INFIX_BITAND] = {9, 9},
    [INFIX_BITXOR] = {8, 8},
    [INFIX_BITOR] = {7, 7},
    [INFIX_LT] = {6, 6},
    [INFIX_LE] = {6, 6},
    [INFIX_GT] = {6, 6},
    [INFIX_GE] = {6, 6},
    [INFIX_EQ] = {5, 5},
    [INFIX_NE] = {5, 5},
    [INFIX_AND] = {4, 4},
    [INFIX_OR] = {3, 3},
    [INFIX_RANGE] = {2, 2},
    [INFIX_RANGEI] = {2, 2},
    [INFIX_ASSIGN] = {1, 1},
    [INFIX_ACONCAT] = {1, 1},
    [INFIX_AADD] = {1, 1},
    [INFIX_ASUB] = {1, 1},
    [INFIX_AMUL] = {1, 1},
    [INFIX_ADIV] = {1, 1},
    [INFIX_AMOD] = {1, 1},
    [INFIX_ABITXOR] = {1, 1},
    [INFIX_ABITAND] = {1, 1},
    [INFIX_ABITOR] = {1, 1},
    [INFIX_ASHL] = {1, 1},
    [INFIX_ASHR] = {1, 1},
};

static uint8_t const kUnOpPrecedence = 13;

static unsigned left_prec(enum InfixOp op)
{
    return kInfixPrec[op].left;
}

static unsigned right_prec(enum InfixOp op)
{
    return kInfixPrec[op].right;
}

static enum UnOp get_unop(TokenKind kind)
{
    switch (kind) {
        case '#':
            return UN_LEN;
        case '-':
            return UN_NEG;
        case '!':
            return UN_NOT;
        case '~':
            return UN_BNOT;
        default:
            return NOT_UNOP;
    }
}

static enum InfixOp get_infixop(TokenKind kind)
{
    switch (kind) {
        case '=':
            return INFIX_ASSIGN;
        case '+':
            return INFIX_ADD;
        case '-':
            return INFIX_SUB;
        case '*':
            return INFIX_MUL;
        case '/':
            return INFIX_DIV;
        case '%':
            return INFIX_MOD;
        case '<':
            return INFIX_LT;
        case '>':
            return INFIX_GT;
        case '^':
            return INFIX_BITXOR;
        case '&':
            return INFIX_BITAND;
        case '|':
            return INFIX_BITOR;
        case TK_PLUS2:
            return INFIX_CONCAT;
        case TK_AS:
            return INFIX_AS;
        case TK_EQUALS2:
            return INFIX_EQ;
        case TK_LESS2:
            return INFIX_SHL;
        case TK_GREATER2:
            return INFIX_SHR;
        case TK_AMPER2:
            return INFIX_AND;
        case TK_PIPE2:
            return INFIX_OR;
        case TK_BANG_EQ:
            return INFIX_NE;
        case TK_LESS_EQ:
            return INFIX_LE;
        case TK_GREATER_EQ:
            return INFIX_GE;
        case TK_DOT2:
            return INFIX_RANGE;
        case TK_DOT2_EQ:
            return INFIX_RANGEI;
        case TK_PLUS2_EQ:
            return INFIX_ACONCAT;
        case TK_PLUS_EQ:
            return INFIX_AADD;
        case TK_MINUS_EQ:
            return INFIX_ASUB;
        case TK_STAR_EQ:
            return INFIX_AMUL;
        case TK_SLASH_EQ:
            return INFIX_ADIV;
        case TK_PERCENT_EQ:
            return INFIX_AMOD;
        case TK_CARET_EQ:
            return INFIX_ABITXOR;
        case TK_AMPER_EQ:
            return INFIX_ABITAND;
        case TK_PIPE_EQ:
            return INFIX_ABITOR;
        case TK_LESS2_EQ:
            return INFIX_ASHL;
        case TK_GREATER2_EQ:
            return INFIX_ASHR;
        default:
            return NOT_INFIX;
    }
}

static void skip(struct Lex *lex)
{
    pawX_next(lex);
}

static paw_Bool test(struct Lex *lex, TokenKind kind)
{
    return lex->t.kind == kind;
}

static paw_Bool test_next(struct Lex *lex, TokenKind kind)
{
    if (test(lex, kind)) {
        skip(lex);
        return PAW_TRUE;
    }
    return PAW_FALSE;
}

static void check(struct Lex *lex, TokenKind want)
{
    if (!test(lex, want))
        PARSE_ERROR(lex, unexpected_symbol, lex->t.span.start);
}

static void check_next(struct Lex *lex, TokenKind want)
{
    check(lex, want);
    skip(lex);
}

static void semicolon(struct Lex *lex, char const *where)
{
    struct SourceLoc const loc = lex->t.span.start;
    if (!test_next(lex, ';'))
        // error occurs right after the previous token
        PARSE_ERROR(lex, expected_semicolon, loc, where);
}

static void add_string_part(struct Lex *lex, struct AstStringList *parts, struct SourceSpan span, Value str)
{
    AstStringList_push(lex->ast, parts, (struct AstStringPart){
                .is_str = PAW_TRUE,
                .str.span = span,
                .str.value = str,
            });
}

static void add_expr_part(struct Lex *lex, struct AstStringList *parts, struct AstExpr *expr)
{
    AstStringList_push(lex->ast, parts, (struct AstStringPart){
                .is_str = PAW_FALSE,
                .expr = expr,
            });
}

static struct AstExpr *string_expr(struct Lex *lex, struct SourceSpan span, Value str)
{
    struct AstStringList *parts = AstStringList_new(lex->ast);
    add_string_part(lex, parts, span, str);
    return NEW_NODE(lex, string_expr, span, next_id(lex), parts);
}

// Parse an interpolated string
//
// For example, the string "abc\{123}" results in the following tokens:
//
//      index | kind              | payload
//     -------|-------------------|---------
//      1     | STRING_EXPR_OPEN  | "abc"
//      2     | INT               | 123
//      3     | STRING_EXPR_CLOSE | -
//      4     | STRING_TEXT       |  ""
//
static struct AstExpr *string_interp_expr(struct Lex *lex, struct SourceLoc start)
{
    struct AstStringList *parts = AstStringList_new(lex->ast);
    do {
        if (test(lex, TK_END)) break;
        struct Token const t = lex->t;
        skip(lex); // skip string text
        add_string_part(lex, parts, t.span, t.value);
        add_expr_part(lex, parts, expect_expr0(lex));
        check_next(lex, TK_STRING_EXPR_CLOSE);
    } while (test(lex, TK_STRING_EXPR_OPEN));
    check(lex, TK_STRING_TEXT);
    struct SourceSpan const span = lex->t.span;
    add_string_part(lex, parts, span, lex->t.value);
    skip(lex); // skip string text
    return NEW_NODE(lex, string_expr, SPAN(start, span.end), next_id(lex), parts);
}

static struct AstIdent parse_ident(struct Lex *lex)
{
    check(lex, TK_NAME);
    struct Token const t = lex->t;
    Str *name = V_STR(t.value);
    skip(lex);

    return (struct AstIdent){
        .name = name,
        .span = t.span,
    };
}

static struct AstIdent parse_ident_or_underscore(struct Lex *lex)
{
    if (test(lex, TK_UNDERSCORE)) {
        struct Token const t = lex->t;
        skip(lex); // skip "_" token
        return (struct AstIdent){
            .name = CSTR(lex, CSTR_UNDERSCORE),
            .span = t.span,
        };
    } else {
        return parse_ident(lex);
    }
}

static void ensure_not_underscore(struct Lex *lex, struct AstIdent ident)
{
    if (equals_cstr(lex, ident.name, CSTR_UNDERSCORE))
        PARSE_ERROR(lex, unexpected_underscore, ident.span.start);
}

static struct AstExpr *new_basic_lit(struct Lex *lex, struct SourceSpan span, Value value, enum BuiltinKind code)
{
    return NEW_NODE(lex, basic_lit, span, next_id(lex), value, code);
}

static struct AstType *unit_type(struct Lex *lex, struct SourceSpan span)
{
    struct AstTypeList *types = AstTypeList_new(lex->ast);
    return NEW_NODE(lex, tuple_type, span, next_id(lex), types);
}

static struct AstExpr *emit_bool(struct Lex *lex, struct SourceSpan span, paw_Bool b)
{
    return new_basic_lit(lex, span, I2V(b), BUILTIN_BOOL);
}

static struct AstType *parse_type(struct Lex *lex, paw_Bool is_strict);
static struct AstType *parse_strict_type(struct Lex *lex);
static struct AstType *parse_relaxed_type(struct Lex *lex);

static struct AstDecl *variant_field_decl(struct Lex *lex)
{
    struct AstIdent const empty = {0};
    struct AstType *tag = parse_type(lex, PAW_TRUE);
    return NEW_NODE(lex, field_decl, NODE_SPAN(tag), next_id(lex), empty, tag, PAW_FALSE);
}

#define DEFINE_LIST_PARSER(Name_, A_, B_, Limit_, What_, Fn_, List_)                                          \
    static struct SourceLoc parse_##Name_##_list(struct Lex *lex, struct List_ *list, struct SourceLoc start) \
    {                                                                                                         \
        do {                                                                                                  \
            if (test(lex, B_)) break;                                                                         \
            if (list->count == INT_MAX) break;                                                                \
            List_##_push((lex)->ast, list, (Fn_)(lex));                                                       \
        } while (test_next(lex, ','));                                                                        \
        if (list->count > (Limit_))                                                                           \
            LIMIT_ERROR(lex, start, What_, (Limit_));                                                         \
        struct SourceLoc const end = TOKEN_END(lex->t);                                                       \
        delim_next(lex, B_, A_, start);                                                                       \
        return end;                                                                                           \
    }
DEFINE_LIST_PARSER(arg, '(', ')', PAW_MAX_ARGUMENTS, "arguments", expect_expr0, AstExprList)
DEFINE_LIST_PARSER(variant_field, '(', ')', PAW_MAX_FIELDS, "variant fields", variant_field_decl, AstDeclList)
DEFINE_LIST_PARSER(strict_type, '<', '>', INT_MAX, "type arguments", parse_strict_type, AstTypeList)
DEFINE_LIST_PARSER(relaxed_type, '<', '>', INT_MAX, "type arguments", parse_relaxed_type, AstTypeList)

static struct AstTypeList *strict_type_list(struct Lex *lex, struct SourceLoc start)
{
    ++lex->expr_depth;
    struct AstTypeList *list = AstTypeList_new(lex->ast);
    parse_strict_type_list(lex, list, start);
    if (list->count == 0)
        PARSE_ERROR(lex, empty_type_list, start);

    --lex->expr_depth;
    return list;
}

static struct AstTypeList *relaxed_type_list(struct Lex *lex, struct SourceLoc start)
{
    ++lex->expr_depth;
    struct AstTypeList *list = AstTypeList_new(lex->ast);
    parse_relaxed_type_list(lex, list, start);
    if (list->count == 0)
        PARSE_ERROR(lex, empty_type_list, start);

    --lex->expr_depth;
    return list;
}

static struct AstTypeList *maybe_strict_type_args(struct Lex *lex)
{
    return test_next(lex, '<') ? strict_type_list(lex, lex->loc) : NULL;
}

static struct AstTypeList *maybe_relaxed_type_args(struct Lex *lex)
{
    return test_next(lex, '<') ? relaxed_type_list(lex, lex->loc) : NULL;
}

static struct AstPath parse_pathexpr(struct Lex *lex)
{
    struct AstSegments *s = AstSegments_new(lex->ast);
    struct SourceLoc const start = lex->t.span.start;

    do {
    next_segment:
        if (s->count == INT_MAX) break;
        struct AstIdent const ident = parse_ident(lex);
        struct SourceSpan span = ident.span;
        struct AstTypeList *args = NULL;
        // permit "::<types..>" between segments
        if (test_next(lex, TK_COLON2)) {
            args = maybe_relaxed_type_args(lex);
            if (args == NULL) {
                pawAst_add_segment(lex->ast, s, ident.span, next_id(lex), ident, NULL);
                goto next_segment;
            }
            span = span_from(lex, span.start);
        }
        pawAst_add_segment(lex->ast, s, span, next_id(lex), ident, args);
    } while (test_next(lex, TK_COLON2));

    if (s->count > MAX_PATH_SEGMENTS)
        LIMIT_ERROR(lex, start, "path segments", MAX_PATH_SEGMENTS);

    return (struct AstPath){
        .span = span_from(lex, start),
        .segments = s,
    };
}

static struct AstPath parse_pathtype(struct Lex *lex, paw_Bool is_strict)
{
    struct AstSegments *s = AstSegments_new(lex->ast);
    struct SourceLoc const start = lex->t.span.start;

    do {
        if (s->count == INT_MAX) break;
        struct AstIdent const ident = parse_ident(lex);
        struct SourceSpan span = ident.span;
        struct AstTypeList *args = NULL;
        if (test_next(lex, '<')) {
            // _<types..> is not allowed
            ensure_not_underscore(lex, ident);
            args = is_strict
                ? strict_type_list(lex, start)
                : relaxed_type_list(lex, start);
            span = span_from(lex, span.start);
        }
        pawAst_add_segment(lex->ast, s, span, next_id(lex), ident, args);
    } while (test_next(lex, TK_COLON2));

    if (s->count > MAX_PATH_SEGMENTS)
        LIMIT_ERROR(lex, start, "path segments", MAX_PATH_SEGMENTS);

    return (struct AstPath){
        .span = span_from(lex, start),
        .segments = s,
    };
}

static struct AstExpr *path_expr(struct Lex *lex)
{
    struct AstPath path = parse_pathexpr(lex);
    return NEW_NODE(lex, path_expr, path.span, next_id(lex), path);
}

static struct AstPat *struct_field_pat(struct Lex *lex)
{
    struct AstIdent const ident = parse_ident(lex);

    struct AstPat *pat;
    if (test_next(lex, ':')) {
        pat = pattern(lex);
    } else {
        // binds field to variable of same name
        pat = NEW_NODE(lex, ident_pat, ident.span, next_id(lex), ident);
    }
    return NEW_NODE(lex, field_pat, SPAN(ident.span.start, NODE_END(pat)),
            next_id(lex), ident, pat);
}

DEFINE_LIST_PARSER(variant_field_pat, '(', ')', PAW_MAX_FIELDS, "variant fields", pattern, AstPatList)
DEFINE_LIST_PARSER(struct_field_pat, '{', '}', PAW_MAX_FIELDS, "struct fields", struct_field_pat, AstPatList)

static paw_Bool is_wildcard_path(struct AstPath path)
{
    struct AstSegments *segments = path.segments;
    paw_assert(segments->count > 0);
    if (segments->count > 1) return PAW_FALSE;
    struct AstSegment const segment = K_LIST_FIRST(segments);
    Str const *name = segment.ident.name;
    return pawS_length(name) == 1 && name->text[0] == '_';
}

static enum BuiltinKind get_builtin_kind(struct Lex *lex, struct AstIdent ident)
{
    if (equals_cstr(lex, ident.name, CSTR_BOOL)) {
        return BUILTIN_BOOL;
    } else if (equals_cstr(lex, ident.name, CSTR_INT)) {
        return BUILTIN_INT;
    } else if (equals_cstr(lex, ident.name, CSTR_FLOAT)) {
        return BUILTIN_FLOAT;
    } else if (equals_cstr(lex, ident.name, CSTR_STR)) {
        return BUILTIN_STR;
    } else if (equals_cstr(lex, ident.name, CSTR_LIST)) {
        return BUILTIN_LIST;
    } else if (equals_cstr(lex, ident.name, CSTR_MAP)) {
        return BUILTIN_MAP;
    } else {
        return NBUILTINS;
    }
}

static struct AstPat *compound_pat(struct Lex *lex)
{
    struct AstPath const path = parse_pathexpr(lex);
    if (test_next(lex, '(')) {
        struct AstPatList *fields = AstPatList_new(lex->ast);
        struct SourceLoc const end = parse_variant_field_pat_list(lex, fields, path.span.start);
        return NEW_NODE(lex, variant_pat, SPAN(path.span.start, end), next_id(lex), path, fields);
    } else if (test_next(lex, '{')) {
        struct AstPatList *fields = AstPatList_new(lex->ast);
        struct SourceLoc const end = parse_struct_field_pat_list(lex, fields, path.span.start);
        return NEW_NODE(lex, struct_pat, SPAN(path.span.start, end), next_id(lex), path, fields);
    }
    if (path.segments->count == 1) {
        struct AstSegment const segment = K_LIST_FIRST(path.segments);
        if (get_builtin_kind(lex, segment.ident) != NBUILTINS)
            PARSE_ERROR(lex, reserved_identifier, lex->loc, segment.ident.name->text);
        if (segment.types == NULL)
            return NEW_NODE(lex, ident_pat, segment.span, next_id(lex), segment.ident);
    }
    return NEW_NODE(lex, path_pat, path.span, next_id(lex), path);
}

static struct AstPat *wildcard_pat(struct Lex *lex)
{
    struct SourceSpan const span = lex->t.span;
    skip(lex); // "_" token
    return NEW_NODE(lex, wildcard_pat, span, next_id(lex));
}

static struct AstPat *tuple_pat(struct Lex *lex)
{
    struct SourceLoc const start = TOKEN_START(lex->t);
    skip(lex); // "(" token
    struct AstPatList *elems = AstPatList_new(lex->ast);
    struct SourceLoc const end = parse_variant_field_pat_list(lex, elems, start);
    return NEW_NODE(lex, tuple_pat, SPAN(start, end), next_id(lex), elems);
}

static struct AstExpr *literal_expr(struct Lex *lex)
{
    struct SourceLoc const start = TOKEN_START(lex->t);
    paw_Bool const negative = test_next(lex, '-');

    enum BuiltinKind code;
    switch (lex->t.kind) {
        case TK_TRUE:
            V_SET_BOOL(&lex->t.value, PAW_TRUE);
            code = BUILTIN_BOOL;
            break;
        case TK_FALSE:
            V_SET_BOOL(&lex->t.value, PAW_FALSE);
            code = BUILTIN_BOOL;
            break;
        case TK_CHAR:
            code = BUILTIN_CHAR;
            break;
        case TK_INT:
            code = BUILTIN_INT;
            break;
        case TK_FLOAT:
            code = BUILTIN_FLOAT;
            break;
        case TK_STRING_TEXT:
            code = BUILTIN_STR;
            break;
        default:
            PARSE_ERROR(lex, nonliteral_pattern, lex->loc);
    }
    Value const value = lex->t.value;
    struct SourceLoc const end = TOKEN_END(lex->t);
    struct AstExpr *expr = new_basic_lit(lex, SPAN(start, end), value, code);
    struct AstLiteralExpr *lit = AstGetLiteralExpr(expr);
    skip(lex); // literal token

    if (negative) {
        if (code == BUILTIN_FLOAT) {
            V_SET_FLOAT(&lit->basic.value, -V_FLOAT(value));
        } else if (code != BUILTIN_INT) {
            PARSE_ERROR(lex, invalid_literal_negation, lex->loc);
        } else if (V_UINT(value) > (paw_Uint)PAW_INT_MAX + 1) {
            PARSE_ERROR(lex, integer_out_of_range, lex->loc, value.u);
        } else if (V_UINT(value) == (paw_Uint)PAW_INT_MAX + 1) {
            V_SET_INT(&lit->basic.value, PAW_INT_MIN);
        } else {
            V_SET_INT(&lit->basic.value, -(paw_Int)V_UINT(value));
        }
    } else if (code == BUILTIN_INT && value.u > (paw_Uint)PAW_INT_MAX) {
        PARSE_ERROR(lex, integer_out_of_range, lex->loc, value.u);
    }
    return expr;
}

static struct AstPat *literal_pat(struct Lex *lex)
{
    struct AstExpr *expr = literal_expr(lex);
    return NEW_NODE(lex, literal_pat, NODE_SPAN(expr), next_id(lex), expr);
}

static struct AstPat *alternative_pat(struct Lex *lex)
{
    switch (lex->t.kind) {
        case TK_NAME:
            return compound_pat(lex);
        case TK_UNDERSCORE:
            return wildcard_pat(lex);
        case '(':
            return tuple_pat(lex);
        default:
            return literal_pat(lex);
    }
}

static struct AstPat *pattern(struct Lex *lex)
{
    struct SourceLoc const start = TOKEN_START(lex->t);
    struct AstPat *first = alternative_pat(lex);
    if (!test_next(lex, '|')) return first;

    AstPatList *pats = AstPatList_new(lex->ast);
    AstPatList_push(lex->ast, pats, first);

    struct AstPat *next;
    do {
        next = alternative_pat(lex);
        AstPatList_push(lex->ast, pats, next);
    } while (test_next(lex, '|'));

    return NEW_NODE(lex, or_pat, SPAN(start, NODE_END(next)), next_id(lex), pats);
}

static struct AstExpr *expr_except_struct_lit(struct Lex *lex);

static struct AstDeclList *variant_field_list(struct Lex *lex, struct SourceLoc start)
{
    ++lex->expr_depth;
    struct AstDeclList *list = AstDeclList_new(lex->ast);
    parse_variant_field_list(lex, list, start);
    if (list->count == 0)
        PARSE_ERROR(lex, empty_variant_field_list, start);

    --lex->expr_depth;
    return list;
}

static struct AstType *parse_tuple_type(struct Lex *lex, struct AstType *first, struct SourceLoc start, paw_Bool is_strict)
{
    struct AstTypeList *elems = AstTypeList_new(lex->ast);
    AstTypeList_push(lex->ast, elems, first);

    do {
        if (test(lex, ')')) break;
        if (elems->count == INT_MAX) break;
        struct AstType *type = parse_type(lex, is_strict);
        AstTypeList_push(lex->ast, elems, type);
    } while (test_next(lex, ','));

    if (elems->count > PAW_MAX_FIELDS)
        LIMIT_ERROR(lex, start, "tuple elements", PAW_MAX_FIELDS);

    struct SourceLoc const end = TOKEN_END(lex->t);
    delim_next(lex, ')', '(', start);
    return NEW_NODE(lex, tuple_type, SPAN(start, end), next_id(lex), elems);
}
